force-app/main/default/objects/CB_Pricing_Tiers__c/CB_Pricing_Tiers__c.object-meta.xml
<CustomObject>
    <label>CB Pricing Tier</label>
    <nameField>
        <label>CB Pricing Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Pricing Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>