force-app/main/default/objects/CB_Pricing_Tiers__c/fields/PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryId__c</fullName>
    <label>PriceBookEntryId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>