force-app/main/default/objects/CB_Pricing_Tiers__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>CB_PriceBookEntries</relationshipName>
    <type>Lookup</type>
</CustomField>