force-app/main/default/objects/CB_Pricing_Tiers__c/fields/Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_Limit__c</fullName>
    <label>Upper Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>